# da-exercices

./: CMakeLists.txt
TP1/: TestAux.cpp  TestAux.h  ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex6.cpp  ex8.cpp  ex9.cpp  exercises.h
TP2/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex6.cpp  ex7.cpp  exercises.h
TP3/: MSTTestAux.cpp  MSTTestAux.h  ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex6.cpp  ex7.cpp  exercises.h
TP4/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex6.cpp  exercises.h
TP5/: TestAux.cpp  TestAux.h  ex1.cpp  ex10.cpp  ex11.cpp  ex12.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex6.cpp  ex7.cpp  ex8.cpp  ex9.cpp  exercises.h
TP7/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex6.cpp  ex7.cpp  exercises.h
data_structures/: Graph.h  VertexEdge.h
running_examples/closest_point_pair/: ClosestPointPair.cpp  ClosestPointPair.h
